--- a/style.css
+++ b/style.css
@@ -77,7 +77,11 @@ body {
     background-color: white;
     grid-column: 2 / 6;
     grid-row: 1 / 2;
+    display: grid;
+    grid-template-rows: 2fr 3fr;
 }
+
+
 
 .content {
     background-color: #F7EDF0;
@@ -101,7 +105,7 @@ body {
 .all-projects {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(3, 150px);
+    grid-template-rows: repeat(3, 160px);
 }
 
 .project {
@@ -111,8 +115,9 @@ body {
     border-left: 5px solid orange;
     border-radius: 10px;
     padding: 10px;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 20px 2px;    
     margin: 8px;
+    background-color: white;
 }
 
 .project h3 {
@@ -121,7 +126,6 @@ body {
     margin: 0px;
     align-self: end;
     font-size: 16px;
-
 }
 
 .project p {
@@ -130,7 +134,6 @@ body {
     margin: 0px;
     align-self: start;
     font-size: 14px;
-
 }
 
 .project img {
@@ -160,11 +163,63 @@ body {
 .announcements {
     grid-column: 3 / 4;
     grid-row: 1 / 2;
+    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.announcements h2 {
+    margin-top: 0px;
+}
+
+.ann-sect {
+    flex-grow: 1;
+    display: grid;
+    margin-right: 40px;
+    padding: 14px;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 20px 2px;    
+}
+
+.ann h4 {
+    margin: 0px;
+    font-size: 12px;
+}
+
+.ann p {
+    margin: 0px;
+    font-size: 12px;
+}
+
+.ann-sect hr {
+    border: 0;
+    height: 1px;
+    width: 70%;
+    background-color: grey; /* Define color of the line */
+
 }
 
 .trending {
     grid-column: 3 / 4;
     grid-row: 2 / 3;
+    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.trend-sect {
+    flex-grow: 1;
+    display: grid;
+    margin-right: 40px;
+    padding: 12px;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 20px 2px;    
+}
+
+.trending h2 {
+    margin-top: 0px;
 }
 
 .footer {
